Increase default page zoom by 25%

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             color: white;
             overflow: hidden;
             transition: background-color 0.5s ease;
+            zoom: 1.25;
         }
         .font-jua { font-family: 'Jua', sans-serif; }
 
