--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             background-color: #121212;
             color: white;
             overflow: hidden;
+            margin: 0;
             transition: background-color 0.5s ease;
         }
 
