--- a/index.html
+++ b/index.html
@@ -1335,8 +1335,14 @@ function setCharExpression(type) {
                 spinBtn: document.getElementById('spin-btn'),
                 reviewToast: document.getElementById('review-toast'),
             };
-            const response = await fetch("data/quizzes.json");
-            allQuizzes = await response.json();
+            try {
+                const response = await fetch("data/quizzes.json");
+                allQuizzes = await response.json();
+            } catch (err) {
+                console.error('Failed to load quizzes', err);
+                dom.loadingScreen.innerHTML = '<div class="font-jua text-3xl text-red-500">퀴즈 데이터를 불러올 수 없습니다.</div>';
+                return;
+            }
 
             initializeGlobalState();
             renderKnowledgeMap();
